naming and icons

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,16 @@
 {
-    "name": "Piano Cookie viewer",
+    "name": "Piano Helper",
     "description": "Base Level Extension",
     "version": "1.0",
     "manifest_version": 3,
     "action": {
-        "default_popup": "default.html",
-        "default_icon": "hello_extensions.png"
+        "default_popup": "piano_helper.html",
+        "default_icon": "piano_helper_small.png"
     },
     "host_permissions": [
         "*://*/*"
       ],
     "permissions": [
-        "cookies",
-        "scripting"
+        "cookies"
     ]
 }
