--- a/package.json
+++ b/package.json
@@ -5,17 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack/webpack.config.js"
+    "build": "tsc && vite build"
   },
   "keywords": [],
   "author": "Andreas Neumann",
   "license": "ISC",
   "devDependencies": {
     "@types/chrome": "^0.0.267",
-    "copy-webpack-plugin": "^12.0.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "vite": "^5.2.11"
   }
 }
