naming and types
stable when subs are missing

human readable timestamp

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: test and build
 
 on: [push]
 
@@ -13,5 +13,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-      - run: npm ci
+      - run: npm install
+      - run: npm test
       - run: npm run build --if-present
